syntax = "proto3";

package datanode_datanode;

import "client_namenode.proto";
service Peer{
  rpc CreatePipeline(CreatePipelineRequest) returns (CreatePipelineResponse);
  rpc StoreChunk(StoreChunkRequest) returns (StoreChunkResponse);
  rpc CommitChunk(CommitChunkRequest) returns (CommitChunkResponse);
}

message CreatePipelineRequest {
  string chunk_id =1;
  repeated client_namenode.DataNodeMeta  replica_set = 2;
}
message CreatePipelineResponse {
  string address = 1;
}

message StoreChunkRequest {
  string chunk_id=1;
}

message StoreChunkResponse{
  string address =1;
}

message CommitChunkRequest {
  string chunk_id = 1;
}
message CommitChunkResponse {
  bool committed =1;
}
